test_portal = configure_file(input: 'test.portal',
    output: '@PLAINNAME@',
    copy: true,
    install: enable_installed_tests,
    install_dir: installed_tests_dir / 'portals',
)

limited_portal = configure_file(input: 'limited.portal',
    output: '@PLAINNAME@',
    copy: true,
    install: enable_installed_tests,
    install_dir: installed_tests_dir / 'portals',
)
